// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  x_of_y_shown.3.5
  <Button
    className="spacer-left"
    data-test="show-more"
    onClick={[Function]}
  >
    show_more
  </Button>
</div>
`;

exports[`should render correctly: empty if everything is loaded 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  x_of_y_shown.5.5
</div>
`;

exports[`should render correctly: empty if no loadMore nor reload props 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  x_of_y_shown.3.5
</div>
`;

exports[`should render correctly: force show load more button if count % pageSize is 0, and total is undefined 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  x_show.60
  <Button
    className="spacer-left"
    data-test="show-more"
    onClick={[Function]}
  >
    show_more
  </Button>
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  x_of_y_shown.3.5
  <Button
    className="spacer-left"
    data-test="show-more"
    disabled={true}
    onClick={[Function]}
  >
    show_more
  </Button>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
  />
</div>
`;

exports[`should render correctly: reload 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  x_of_y_shown.3.5
  <Button
    className="spacer-left"
    data-test="reload"
    onClick={[MockFunction]}
  >
    reload
  </Button>
</div>
`;

exports[`should render correctly: reload, loading 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  x_of_y_shown.3.5
  <Button
    className="spacer-left"
    data-test="reload"
    disabled={true}
    onClick={[MockFunction]}
  >
    reload
  </Button>
  <DeferredSpinner
    className="text-bottom spacer-left position-absolute"
  />
</div>
`;

exports[`should render correctly: total undefined 1`] = `
<div
  className="list-footer spacer-top note text-center"
  tabIndex={-1}
>
  x_show.3
</div>
`;
